# ansible-role-tpl

./: .ansible-lint  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  COPYRIGHT  LICENSE  Makefile  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml  release-please.yml
defaults/: main.yml
group_vars/: group-foo
handlers/: main.yml
host_vars/: hostname-foo
meta/: main.yml
molecule/_partials/playbooks/: converge.yml  verify.yml
molecule/_partials/tasks/: setup.yml
roles/tpl/meta/: main.yml
tasks/: main.yml
tests/: ansible.cfg  inventory.yml  requirements.yml  test.yml
tests/defaults/: main.yml
vars/: main.yml
